# meta-extractor

./: .env  .env_example  .gitignore  Cargo.toml  README.md  q
backend/: Cargo.toml
backend/src/: main.rs
backend/src/meta_data/: mod.rs  model.rs  services.rs
extractor/: Cargo.toml
extractor/src/: lib.rs
helper/: Cargo.toml
helper/src/: main.rs
