[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extractor = {path="../extractor"}
actix-web = "4.2.1"
sqlx = {version ="0.6.2", features = ["runtime-actix-rustls","mysql","macros"]}
serde = {version = "1.0.145", features = ["derive"]}
dotenv = "0.15.0"
chrono = {version = "0.4.24", features = ["serde"]}
actix-cors = "0.6.4"
