[package]
name = "extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11", features = ["json","stream"] }
tokio = { version = "^1", features = ["full"] }
gstreamer = "0.20.3"
gstreamer-video = "0.20.3"